--- a/seyyar.html
+++ b/seyyar.html
@@ -8,7 +8,8 @@
    
   </head>
   <body class="container">
-
+<h2>Name : Mohamed Seyyar</h2>
+<h2>email : mohamed.seyyar@gmail.com </h2>
    
     <h4>1. Does anchor tag(<code>&lt;</code>a<code>&gt;</code>) apply to text only? Does title attribute apply to text only?</h4>
     <p>A.  NO, NO</p>
