--- a/seyyar.html
+++ b/seyyar.html
@@ -11,100 +11,48 @@
 <h2>Name : Mohamed Seyyar</h2>
 <h2>email : mohamed.seyyar@gmail.com </h2>
    
-    <h4>1. Does anchor tag(<code>&lt;</code>a<code>&gt;</code>) apply to text only? Does title attribute apply to text only?</h4>
-    <p>A.  NO, NO</p>
+    1. Does anchor tag(<code>&lt;</code>a<code>&gt;</code>) apply to text only? Does title attribute apply to text only?</h4>
+    A.  NO, NO
 
 
-<h4>2. What HTML tags MUST be included in order to create an HTML file?
-</h4>
-
-<textarea name="name" rows="8" cols="80">
-A.  &lt;!DOCTYPE html&gt;,&lt;body&gt;,&lt;head&gt;  
-</textarea>
-<h4>
+2. What HTML tags MUST be included in order to create an HTML file?
+A.  
 3.	Which of below HTML code is written properly?
-</h4>
-
-<textarea name="name" rows="8" cols="80">
-   C &lt;div&gt;&lt;img src=”image.jpg”&gt;&lt;hr&gt;&lt;p&gt;&lt;b&gt;some text&lt;/b&gt;&lt;/p&gt;&lt;/div&gt;
- 
-</textarea>
+C.
 
 
-<h4>4. Which of the following CSS properties can be used to change the position of a  &lt;div&gt; block (select all that apply)?
-</h4>
+    
 
-<p>C.  float, display</p>
-<p>D.  margin, float</p>
 
-<h4>5. Which combination of CSS properties/rule could create a 3 by 1 (3 blocks in one row) responsive layout? (select all that apply)</h4>
-<p>B. width, height, float</p>
-<p>C. display, flex-wrap</p>
-<p>D. @media (min-width:600px)</p>
+4. Which of the following CSS properties can be used to change the position of a  &lt;div&gt; block (select all that apply)?
+
+C.  float, display
+D.  margin, float
+
+5. Which combination of CSS properties/rule could create a 3 by 1 (3 blocks in one row) responsive layout? (select all that apply)</h4>
+B. width, height, float
+C. display, flex-wrap
+D. @media (min-width:600px)
 
 <h4>6. Which HTML and CSS code are written properly?</h4>
+D.
+
+
+
+<h4>7. Which Bootstrap code could create a 2 by 1 respongsive layout? 
+D.
 
 
 
 
-<textarea name="name" rows="13" cols="80">  D.
-  HTML:
-  &lt;div class="questionD"&gt;
-    &lt;h1&gt;Title&lt;/h1&gt;
-    &lt;p&gt;description&lt;/p&gt;
-    &lt;img src="imag.jpg" alt="Q-C.jpg"&gt;
-  &lt;/div&gt;
+8. Which atrrtibutes are needed for creating a Bootstrap Modal Window component? 
 
-  &lt;div id="questionC"&gt;
-    &lt;h1&gt;Title&lt;/h1&gt;
-    &lt;p&gt;description&lt;/p&gt;
-    &lt;img src="imag.jpg" alt="Q-C.jpg"&gt;
-  &lt;/div&gt;
-
-  CSS:
-  #questionC,.questionD{
-    color:red;
-    background-color:lightgreen;
-    width:30%;
-    height:300px;
-    float:left;
-  }
-
-</textarea>
-
-<h4>7. Which Bootstrap code could create a 2 by 1 respongsive layout? </h4>
+B. id, data-bs-target, data-bs-toggle
 
 
-<textarea name="name" rows="13" cols="80">  D.
-  HTML:
-&lt;div class="container"&gt;
-  &lt;div class="row"&gt;
-    &lt;div class="col-6"&gt;
-      &lt;h1&gt;Title&lt;/h1&gt;
-      &lt;p&gt;description&lt;/p&gt;
-      &lt;img src="imag.jpg" alt="Q-D.jpg"&gt;
-    &lt;/div&gt;
+9. Which option can used for changing the first paragraph's text color after user click on a button (assuming there is only one button on the web page) </h4>
 
-    &lt;div class="col-6"&gt;
-      &lt;h1&gt;Title&lt;/h1&gt;
-      &lt;p&gt;description&lt;/p&gt;
-      &lt;img src="imag.jpg" alt="Q-D.jpg"&gt;
-    &lt;/div&gt;
-  &lt;/div&gt;
-&lt;/div&gt;
-
-</textarea>
-
-
-
-<h4>8. Which atrrtibutes are needed for creating a Bootstrap Modal Window component? </h4>
-
-<p>B. id, data-bs-target, data-bs-toggle</p>
-
-
-<h4>9. Which option can used for changing the first paragraph's text color after user click on a button (assuming there is only one button on the web page) </h4>
-
- <p>C.  $(button).on('click', function(){$(p).css('color','orange')});</p>
+ C.  $(button).on('click', function(){$(p).css('color','orange')});
 
 
 
@@ -115,12 +63,12 @@ A.  &lt;!DOCTYPE html&gt;,&lt;body&gt;,&lt;head&gt;
 
 <h4>11. How can you empty below array in JavaScript</h4>
 
-<p>D. All of above</p>
+D. All of above
 
 
  <h4>12. Which statement of JavaScript is correct?</h4>
 
-<p>B. JavaScript is a prototype-based language.</p>
+B. JavaScript is a prototype-based language.
 
 
 
@@ -135,26 +83,23 @@ C. Excellent
 
 <h4>15. What is the output of below function? </h4>
 
-<div>
 
-  <p>D.  3.2</p>
- </div>
+
+  D.  3.2
+ 
 
 <h4>16. What would the output of the following code be?</h4>
 
 C. 3
 
 
-
-
-
  <h4>17. Select SQL constraints? </h4>
 
-<div>
+
   <p>A.  NULL</p>
   <p>B.  PRIMARY KEY</p>
 
- </div>
+
 
 
  <h4>18. Which option is DML ?</h4>
@@ -174,13 +119,7 @@ C. 3
 
    
 
-<p>SELECT <br>
-  
-  company_name <br>
-FROM distribution_companies dc <br>
-JOIN movies m <br>
-ON dc.id = m.distribution_company_id;</p>
-   </div>
+
   
 
 
